[package]
name = "taurio-shim"
version = "0.1.0"
edition = "2021"
description = "Tiny native shim that dispatches based on its own filename. Used by Taurio to expose .bat-free php.exe / composer.exe / etc."
license = "MIT"
repository = "https://github.com/version-two/dev.taurio.shim"

[[bin]]
name = "taurio-shim"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = false
